# EmileTrotignon.github.io

./: 404.html  dune  en.tex  fr.tex  highlight.js  index.html  index_en.html  resume.html  resume_en.html  software.html  style.css  style.css.map  style.sass  voronoi.js
_site/: 404.html  index.html  resume.html  software.html  style.css  style.sass
_site/blog/: index.html  printing_and_ocaml.html
_site/files/: dune
blog/: index.html  monad.html  printing_and_ocaml.html  subtyping.html
blog/my_dir/: index.html
blog/ukraine/: index.html  kyiv.html  lviv.html  trajet.html
blog/ukraine/images/: index.html
blog/ukraine/images/kyiv/: index.html
blog/ukraine/images/lviv/: index.html
blog/ukraine/images/trajet/: index.html
blog/ukraine_2024/: index.html  kyiv_1.html  kyiv_2_arche.html  kyiv_2_hidropark.html  kyiv_2_materiya.html  kyiv_3_restaurant.html  kyiv_3_statue.html  kyiv_4_musee_litterature.html  kyiv_4_musee_meduse.html  kyiv_4_podil.html  kyiv_4_saint_andre.html  kyiv_4_sophie_et_michel.html  kyiv_5_depart.html  kyiv_5_hotel_ukraine.html  kyiv_5_roshen_bibliotheque.html  kyiv_5_vdnh.html  lviv.html  lviv_musee.html  trajet_lviv_kyiv.html
blog/ukraine_2024/images/: index.html
blog/ukraine_2024/images/casting/: index.html
blog/ukraine_2024/images/kyiv/: index.html
blog/ukraine_2024/images/kyiv/p1/: index.html
blog/ukraine_2024/images/lviv/: index.html
blog/ukraine_2024/images/trajet_lviv_kyiv/: index.html
blog/ukraine_2024/images/trajet_paris_lviv/: index.html
files/: en.aux  en.out  fr.aux  fr.out
js/: paper-voronoi.js
(+32 files in other folders)
