(rule
 (target style.css)
 (deps
  (file style.sass))
 (aliases style site)
 (action
  (run sass style.sass style.css)))

(rule
 (targets fr.tex en.tex resume_en.html index.html 404.html)
 (alias site)
 (deps
  ../src/main.exe
  (source_tree .))
 (action
  (run ../src/main.exe)))

(rule
 (aliases site script)
 (deps ../src/jsoo/blog_loader.bc.js)
 (action
  (copy ../src/jsoo/blog_loader.bc.js blog_loader.js)))

(rule
 (aliases site blog)
 (deps
  (source_tree ../blog))
 (targets
  (dir blog))
 (action
  (run blog_gen ../blog .)))
